[IMP] account,point_of_sale,sale: adjust storno flows
This commit changes entry reversals when storno accounting is enabled,
which required changes in how debit/credit amounts are computed.

A `account.move` is now considered `is_storno` if it's a refund or a reversal of previous entry.
In some cases, some moves lines could be considered a reversal, not the entire move,
like when creating an invoice for the remaining sale that had a previous downpayment.
So, a new `is_storno` field is added in `account.move.line`. The `is_storno` field is kept
in `account.move` as a non-stored computed field for convenience of setting all move lines
as storno without having to set each move line separately.

The `is_storno` flag in `account.move.line` is used to set the correct debit and credit
amounts in the move line. `is_storno` is set in the compute function (`_compute_is_storno`),
in the inverse debit/credit functions, or manually. Other modules extend the
`_compute_is_storno` function to add relevant logic.

Storno accounting option is enabled by default in several countries and can be optionally
enabled in other countries. By default, any other country has storno accounting not enabled
with no option to enable it.

Meant by storno accounting: any reversal of a previous entry shall be considered a negative amount
in the original debit/credit position rather than a positive amount in the opposite column. 

task-4845062

--- a/addons/account/views/res_config_settings_views.xml
+++ b/addons/account/views/res_config_settings_views.xml
@@ -370,7 +370,7 @@
                                 </div>
                             </div>
                         </block>
-                        <block title="Storno Accounting" id="storno" groups="account.group_account_user">
+                        <block title="Storno Accounting" id="storno" groups="account.group_account_user" invisible="not display_account_storno">
                             <setting id="enable_storno_accounting" company_dependent="1" help="Use negative numbers to reverse original entries">
                                 <field name="account_storno"/>
                             </setting>
