[IMP] l10n_in: introduce PAN Entity Model to Manage GST Contacts with Same PAN
In India, when one company operate in multiple states in each state it gets a
different GST number, but they all share the same PAN number. In Odoo, each
state-wise GST is usually created as a separate contact, which means multiple
contacts can have the same PAN.

---

**Before this commit:**

* PAN was saved as plain text on each contact and company.

---

**After this commit:**

* A new model `l10n_in.pan.entity` is added to manage PAN separately.

* This model has:

  * `name`: the PAN number.
  * `type`: the type of entity (individual, company, etc.).
  * `tds_deduction`: defines the TDS deduction type.

    * If set to "No Deduction", the system will skip TDS warnings for any
partner using that PAN.

* PAN is now linked to contacts and companies using a many2one field.

* When opening the TDS entry wizard:

  * The system automatically sets the **last used TDS tax** for that PAN,
account, and section.
  * The system automatically sets the base for tax deduction according to the
section of the selected tax.

 Task - 4137199

--- a/addons/l10n_in/views/res_company_views.xml
+++ b/addons/l10n_in/views/res_company_views.xml
@@ -15,7 +15,8 @@
                <field class="o_form_label mb-0" name="l10n_in_pan_type" invisible="not l10n_in_pan_type"/>
             </xpath>
             <xpath expr="//field[@name='vat']" position="after">
-                <field name="l10n_in_pan" invisible="country_code != 'IN'"/>
+                <field name="l10n_in_pan_entity_id" invisible="country_code != 'IN'"/>
+                <field name="l10n_in_tan" invisible="not l10n_in_pan_entity_id"/>
             </xpath>
             <xpath expr="//sheet" position="before">
                 <div class="alert alert-warning mt-1 mb-1" role="alert" invisible="not l10n_in_gst_state_warning or country_code != 'IN'">
