--- a/addons/l10n_in/wizard/l10n_in_withhold_wizard.xml
+++ b/addons/l10n_in/wizard/l10n_in_withhold_wizard.xml
@@ -23,7 +23,17 @@
                         <group id="header_left_group">
                             <field name="date" string="Entry Date"/>
                             <field name="base" widget="monetary" options="{'currency_field': 'currency_id'}" required="True"/>
-                            <field name="tax_id" domain="[('l10n_in_tax_type', '=', l10n_in_tds_tax_type)]" required="True"/>
+                            <label for="tax_id" string="TDS Section"/>
+                            <div>
+                                <field name="tax_id" class="oe_inline" domain="[('l10n_in_tax_type', '=', l10n_in_tds_tax_type)]" required="True"
+                                options="{'no_create': True, 'no_open': True}"/>
+                                <field name="tds_deduction" class="oe_inline"
+                                       decoration-success="tds_deduction == 'lower'"
+                                       decoration-danger="tds_deduction == 'higher'"
+                                       decoration-warning="tds_deduction == 'no'"
+                                       invisible="tds_deduction == 'normal'"
+                                />
+                            </div>
                             <field name="amount" widget="monetary" options="{'currency_field': 'currency_id'}"/>
                             <field name="currency_id" invisible="1"/> <!-- used to display the currency symbol -->
                             <field name="related_move_id" invisible="1"/> <!-- used to compute the l10n_in_tds_tax_type -->
