[IMP] purchase: restrict purchase user access to bills with POs
We would prefer not to reveal to purchase users all account moves we
have on the record, so we restrict their access to the ones that are
relevant to them, namely inbound moves (such as bills) with existing
purchase orders. Note that they (in absence of other accounting
permissions) still are not allowed to access the bill matching button.

Additionally they can now access the 'Receipts' action to view the
relevant pickings (whose model they already have full access to), for
which the fields in the inherited form in repair had to be assigned
groups.

Task ID: 4752378

--- a/addons/purchase_stock/views/purchase_views.xml
+++ b/addons/purchase_stock/views/purchase_views.xml
@@ -16,7 +16,7 @@
                 <button type="object"
                     name="action_view_picking"
                     class="oe_stat_button"
-                    icon="fa-truck" invisible="incoming_picking_count == 0" groups="stock.group_stock_user">
+                    icon="fa-truck" invisible="incoming_picking_count == 0" groups="stock.group_stock_user,purchase.group_purchase_user">
                     <field name="incoming_picking_count" widget="statinfo" string="Receipt" help="Incoming Shipments"/>
                 </button>
             </xpath>
