--- a/addons/repair/views/stock_picking_views.xml
+++ b/addons/repair/views/stock_picking_views.xml
@@ -36,10 +36,11 @@
         <field name="inherit_id" ref="stock.view_picking_form"/>
         <field name="arch" type="xml">
             <xpath expr="//button[@name='action_see_packages']" position="after">
-                <field name="repair_ids" invisible="1"/>
+                <field name="repair_ids" invisible="1"
+                       groups="stock.group_stock_user"/>
                 <button name="action_view_repairs" type="object"
                         class="oe_stat_button" icon="fa-wrench"
-                        invisible="nbr_repairs == 0">
+                        invisible="nbr_repairs == 0" groups="stock.group_stock_user">
                         <field name="nbr_repairs" string="Repair Orders" widget="statinfo"/>
                 </button>
             </xpath>
