[IMP] stock: orderpoint small changes
- change the tooltip for product_min_qty & product_max_qty
- remove the compute for product_min_qty
- change the dropdown button text from 'Replenish' to 'Order'
- add new filters ('Archived', 'Automatic')
- remove search options ('Trigger', 'RR')
- remove filter 'Trigger Manual'
- add warning when there's no usable route/vendor/bom on the orderpoint
- always show the trigger column when opening RR from a product

task 4779169

--- a/addons/stock/static/src/views/stock_orderpoint_list_view.xml
+++ b/addons/stock/static/src/views/stock_orderpoint_list_view.xml
@@ -5,7 +5,7 @@
         <xpath expr="//SelectionBox" position="after">
             <Dropdown>
                 <button class="btn btn-secondary">
-                    <span class="o_dropdown_title">Replenish</span>
+                    <span class="o_dropdown_title">Order</span>
                     <i class="fa fa-caret-down ms-1"/>
                 </button>
                 <t t-set-slot="content">
