--- a/addons/purchase_stock/views/stock_views.xml
+++ b/addons/purchase_stock/views/stock_views.xml
@@ -43,7 +43,7 @@
             <field name="inherit_id" ref="stock.stock_reorder_report_search"/>
             <field name="arch" type="xml">
                 <xpath expr="//search" position="inside">
-                    <field name="vendor_id"/>
+                    <field name="vendor_ids"/>
                 </xpath>
             </field>
         </record>
