--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -2787,7 +2787,8 @@
         </div>
         <t t-if='website_sale_order'>
             <div t-if='website_sale_order._get_shop_warning(clear=False)' class="alert alert-warning js_cart_lines" role="alert">
-                <strong>Warning!</strong> <t t-out='website_sale_order._get_shop_warning()'/>
+                <strong>Warning!</strong>
+                <div t-out="website_sale_order._get_shop_warning()" class="text-prewrap"/>
             </div>
         </t>
         <div id="cart_products"
@@ -4424,13 +4425,17 @@
     </template>
 
     <template id="sale_order_re_order_btn" inherit_id="sale.sale_order_portal_template" name="Sale Order Order Again">
-        <xpath expr="//t[@t-set='entries']/div/div/div[hasclass('o_download_pdf')]" position="before">
-            <t t-if="request.website.enabled_portal_reorder_button and sale_order.with_user(request.env.user).sudo()._is_reorder_allowed()">
-                <button class="btn btn-primary o_wsale_reorder_button" t-att-data-sale-order-id="sale_order.id">
+        <div id="print_invoice_sidebar_button" position="after">
+            <t t-if="sale_order.with_user(request.env.user).sudo()._is_reorder_allowed()">
+                <button
+                    id="reorder_sidebar_button"
+                    class="btn btn-secondary o_wsale_reorder_button oe_website_sale"
+                    t-att-data-sale-order-id="sale_order.id"
+                >
                     <i class="fa fa-rotate-right me-1"/>
                     Order Again
                 </button>
             </t>
-        </xpath>
+        </div>
     </template>
 </odoo>
